--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,31 @@
   height: 100vh;
 }
 
+.inputBlock {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  right: 2vw;
+  bottom: 2vh;
+  padding: 10px;
+  z-index: 500;
+}
+
+.addloc {
+  padding: 5px;
+}
+
+.inputBlock input {
+  border: 2px solid rgb(41, 38, 38);
+  font-size: 1.2rem;
+}
+
+.inputBlock button {
+  background-color: #282c34;
+  font-size: 1.5rem;
+  border: 2px black solid;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
